--- a/assets/i18n/en.i18n.json
+++ b/assets/i18n/en.i18n.json
@@ -22,6 +22,8 @@
     "textGapDescription": "The spacing between text in each line of text",
     "rowGapLabel": "Line spacing",
     "rowGapDescription": "The spacing between each line of text",
+    "limitValidator": "Supports up to $maxImages pictures, you can also upload $lastImages picture(s).",
+    "formatValidator": "Only PNG and JPEG formats are supported.",
     "preview": "Preview",
     "save": "Save",
     "savedSuccess": "Saved successfully",
