fix: check updates

--- a/assets/i18n/en.i18n.json
+++ b/assets/i18n/en.i18n.json
@@ -58,7 +58,8 @@
     "help": "Help",
     "support": "Support",
     "userAgreement": "User Agreement",
-    "privacy": "Privacy Policy"
+    "privacy": "Privacy Policy",
+    "updates": "Updates"
   },
   "buttons": {
     "agree": "Agree",
