--- a/assets/i18n/it.i18n.json
+++ b/assets/i18n/it.i18n.json
@@ -58,7 +58,8 @@
     "help": "Aiuto",
     "support": "Supporto",
     "userAgreement": "Accordo utente",
-    "privacy": "Politica sulla riservatezza"
+    "privacy": "Politica sulla riservatezza",
+    "updates": "Aggiornamenti"
   },
   "buttons": {
     "agree": "Accetto",
