--- a/assets/i18n/zh.i18n.json
+++ b/assets/i18n/zh.i18n.json
@@ -58,7 +58,8 @@
     "help": "帮助",
     "support": "支持",
     "userAgreement": "用户协议",
-    "privacy": "隐私政策"
+    "privacy": "隐私政策",
+    "updates": "更新"
   },
   "buttons": {
     "agree": "同意",
