feat: in-app update (#594)
* fix: check updates

* fix: update vars

* fix: update translations

--- a/assets/i18n/en.i18n.json
+++ b/assets/i18n/en.i18n.json
@@ -30,7 +30,11 @@
     "save": "Save",
     "savedSuccess": "Saved successfully",
     "savedFailure": "Failed to save image(s)",
-    "saveInfo": "$succeedNum image(s) saved, $failedNum image(s) failed to save"
+    "saveInfo": "$succeedNum image(s) saved, $failedNum image(s) failed to save",
+    "appNoUpdates": "App is up to date!",
+    "backgroundCheckingStopped": "Background checking stopped",
+    "backgroundCheckingAvailable": "Background check: Update $latestVersion available!",
+    "backgroundCheckingStarted": "Background checking started (every ${seconds}s)"
   },
   "aboutPage": {
     "version": "Version $version($buildNumber)",
@@ -58,7 +62,8 @@
     "help": "Help",
     "support": "Support",
     "userAgreement": "User Agreement",
-    "privacy": "Privacy Policy"
+    "privacy": "Privacy Policy",
+    "updates": "Updates"
   },
   "buttons": {
     "agree": "Agree",
