refactor: change `logging` to `talker`

--- a/assets/i18n/en.i18n.json
+++ b/assets/i18n/en.i18n.json
@@ -63,7 +63,8 @@
     "support": "Support",
     "userAgreement": "User Agreement",
     "privacy": "Privacy Policy",
-    "updates": "Updates"
+    "updates": "Updates",
+    "debug": "Debug"
   },
   "buttons": {
     "agree": "Agree",
